@@ -1,5 +1,5 @@
 # $Id: configure.ac,v 1.1 2007/06/04 22:51:13 taviso Exp $
-AC_INIT([scanmem], [0.10], [taviso@sdf.lonestar.org])
+AC_INIT([scanmem], [0.11], [taviso@sdf.lonestar.org])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 AC_CONFIG_SRCDIR([main.c])
 AC_CONFIG_HEADER([config.h])
