@@ -1,4 +1,5 @@
 2010-04-28 Wang Lu <coolwanglu(a)gmail.com>
+	* Fix build and make it working on freebsd
 	* Bug fix: dump_to_file
 	[Thanks to Bryan Cain]
 	* Manually add a cheat entry
